# NewsManchester

./: .env.example  .gitattributes  .gitignore  AGENTS.md  pyproject.toml
data/: sources.toml  translation_glossary.json
docs/: DECISIONS_AND_LESSONS.md  IMPROVEMENT_LOG.md  IMPROVEMENT_VERIFICATION_2026-07-07.md  PRODUCT_CONTRACTS.md  PROJECT_STATE.md  agent-writer-prompt.md  build-pipeline-v1.md  editorial-style-guide-v1.1.md  local-scheduler.md  local-setup.md  mvp-implementation-plan-v1.md  operational-pipeline-spec-v1.md  phase2a-fact-extraction.md  phase2a-review-notes.md  phase2b-normalization.md  phase2c-rewrite.md  pipeline-agents-v1.md  pre-send-checklist-v1.md  product-change-log-2026-05.md  source-registry-v1.md
scripts/: install_launchd_job.sh  process_bot_updates.sh  refresh_agents_md.py  replay_day.py  replay_weekend_defects.py  run_daily_digest.sh  run_local_digest.py  run_night_inventory.sh  run_pipeline_collect.sh  run_pipeline_publish.sh  sync_runtime_bundle.sh  uninstall_launchd_job.sh
tests/: test_auto_editor_rules.py  test_backlog_remediation.py  test_board_rank.py  test_city_intelligence.py  test_city_trends.py  test_daily_index.py  test_dedupe_and_show.py  test_dedupe_transport.py  test_delivery_content_degrades.py  test_digest_quality_guardrails.py  test_digest_shape.py  test_editor_backoff.py  test_editor_pacing.py  test_editorial_decision.py  test_editorial_quality.py  test_editorial_regression.py  test_editorial_regression_pack.py  test_entity_extraction.py  test_event_extraction.py  test_fact_completeness.py  test_feed_generic_title.py  (+43 more)
(+232 files in other folders)
