[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "news-digest"
version = "0.1.0"
description = "Local MVP for Greater Manchester morning digest"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0",
    "curl_cffi>=0.7",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

